# nordvpn-gui

./: .clang-format  .clang-tidy  .drone.env  .drone.yml  .gitignore  .gitmodules  .iwyu.imp  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  config.yaml  index.html  main.cpp  main.qml  pipeline.sh  qml.qrc
app/: app.h.in  config.h  main.cpp  main.qml  qml.qrc  runguard.cpp  runguard.h
app/common/io/: asyncprocess.cpp  asyncprocess.h  process.cpp  process.h  processresult.cpp  processresult.h
app/common/types/: nullable.h
app/common/util/: strings.cpp  strings.h
app/data/enums/: group.cpp  group.h  protocol.cpp  protocol.h  securityprotocol.h  technology.h
app/data/models/: connectable.cpp  connectable.h  country.cpp  country.h  location.cpp  location.h  server.cpp  server.h
app/data/repositories/: baserepository.cpp  baserepository.h  preferencesrepository.cpp  preferencesrepository.h  serverrepository.cpp  serverrepository.h
app/logic/mediators/: accountmediator.h  connectionmediator.cpp  connectionmediator.h  mapmediator.cpp  mapmediator.h  mediator.cpp  mediator.h  navmediator.cpp  navmediator.h  preferencesmediator.cpp  preferencesmediator.h  qmldataconverter.cpp  qmldataconverter.h  (+5 more)
app/ui/: Translations.qml
ci/website/: data2js.sh  index.html
cmake/: Cloc.cmake  CodeQualityTools.cmake  Conan.cmake  Git.cmake  TranslationHelpers.cmake
cmake/scripts/: compile_commands_no_autogen.cmake
content/docs/: changelog.md  compatibility.md  contribute.md  dontate.md  features.md  install.md  screenshots.md
doc/: CMakeLists.txt  doxyfile.in  style.css  style.iuml
doc/manual/: architecture.h  index.hpp  interaction.h  resources.hpp
docs/: 404.html  CMakeLists.txt  doxyfile.in  index.html  index.xml  robots.txt  sitemap.xml  style.iuml
docs/assets/css/: stylesheet.min.bede68a9dd4108b2b024744899745d0fa8b8063ccc2346eb96eef21da6719acf.css  stylesheet.min.f1995d939f8564fb206422c06fbe022c8f6874465ba07eb9da29c68be5cef47c.css
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/docs/changelog/: index.html
docs/docs/compatibility/: index.html
docs/docs/contribute/: index.html
docs/docs/donate/: index.html
docs/docs/dontate/: index.html
docs/docs/features/: index.html
docs/docs/install/: index.html
docs/docs/page/1/: index.html
docs/docs/screenshots/: index.html
docs/favicon/: browserconfig.xml  site.webmanifest
docs/tags/: index.html  index.xml
layouts/partials/: extend_footer.html  extend_head.html  index_profile.html
layouts/shortcodes/: fa.html  feature.html  featureGallery.html  fetchChangelog.html  img.html
locale/: en_US.ts
res/: CMakeLists.txt  res.qrc
res/Style/: Style.qml  qmldir
res/credits/: _credits.mjs  flagkit.mjs  fontawesome.mjs  libcurl.mjs  nlohmann-json.mjs  qt.mjs  simple-world-map.mjs
res/data/: countries.json
res/fonts/: Font Awesome 5 Brands-Regular-400.js  Font Awesome 5 Free-Solid-900.js
res/freedesktop/: CMakeLists.txt  nordvpn-gui.desktop.in
res/style/: Style.qml
res/translations/: README.md  de.ts  en.ts  translations.qrc.in
src/: CMakeLists.txt  app.h.in  app.hpp.in  config.h  config.h.in  config.hpp.in  main.cpp  qml.qrc  runguard.cpp  runguard.h
src/app/: CMakeLists.txt  qml.qrc
src/app/src/: app.hpp.in  main.cpp  runguard.cpp  runguard.hpp
src/app/src/mediators/: accountmediator.cpp  accountmediator.hpp  connectionmediator.cpp  connectionmediator.hpp  devmediator.cpp  devmediator.hpp  mapimageprovider.hpp  navmediator.cpp  navmediator.hpp  preferencesmediator.cpp  preferencesmediator.hpp  qmldataconverter.cpp  qmldataconverter.hpp  recentsmediator.cpp  recentsmediator.hpp  traymediator.cpp  traymediator.hpp  updatemediator.cpp  updatemediator.hpp
src/app/ui/general/: CloseButton.qml  MenuButton.qml  Text.qml  UpdateCheckPanel.qml
src/app/ui/icons/: Fa5Icon.qml  IconOnion.qml
src/app/ui/map/: ConnectionStatusPanel.qml  DebugOverlay.qml  Map.qml  Marker.qml
src/app/ui/views/: MainView.qml  MiscErrorView.qml
src/app/ui/windows/: CreditsWindow.qml  PreferencesWindow.qml
src/libnordvpn/: CMakeLists.txt
src/libnordvpn/include/nordvpn/: config.hpp.in  factory.hpp  iaccountcontroller.hpp  iconnectioncontroller.hpp  icountrycontroller.hpp  ienvcontroller.hpp  ipreferencescontroller.hpp  irecentscontroller.hpp  iservercontroller.hpp  istatuscontroller.hpp  iupdatecheckcontroller.hpp
src/libnordvpn/include/nordvpn/enums/: group.hpp  mainwindowview.hpp  protocol.hpp
src/libnordvpn/include/nordvpn/io/: asyncprocess.hpp  process.hpp  processresult.hpp
src/libnordvpn/include/nordvpn/models/: connectioninfo.hpp  country.hpp  envinfo.hpp  location.hpp  nordvpnsettings.hpp  server.hpp  version.hpp  whitelistportentry.hpp
src/libnordvpn/include/nordvpn/subscriptions/: iconnectioninfosubscription.hpp  ienvinfosubscription.hpp  iupdatechecksubscription.hpp
src/libnordvpn/src/: backgroundtaskable.hpp  factory.cpp  libnordvpn.hpp.in  subscribable.hpp
src/libnordvpn/src/controllers/: accountcontroller.cpp  accountcontroller.hpp  basecontroller.cpp  connectioncontroller.cpp  connectioncontroller.hpp  countrycontroller.cpp  countrycontroller.hpp  envcontroller.cpp  envcontroller.hpp  preferencescontroller.cpp  preferencescontroller.hpp  recentscontroller.hpp  servercontroller.cpp  servercontroller.hpp  statuscontroller.cpp  statuscontroller.hpp  updatecheckcontroller.cpp  updatecheckcontroller.hpp
src/libnordvpn/src/enums/: connectionstatus.cpp  group.cpp  protocol.cpp  technology.cpp
src/libnordvpn/src/io/: asyncprocess.cpp  process.cpp  processresult.cpp
src/libnordvpn/src/models/: connectable.cpp  connectioninfo.cpp  country.cpp  envinfo.cpp  location.cpp  nordvpnsettings.cpp  server.cpp  version.cpp  whitelistportentry.cpp
src/libnordvpn/src/repositories/: iserverrepository.hpp  iupdatecheckrepository.hpp  preferencesrepository.cpp  serverrepository.cpp  serverrepository.hpp  updatecheckrepository.cpp  updatecheckrepository.hpp
src/libnordvpn/src/util/: strings.cpp
src/ui/: Translations.qml
static/favicon/: README.md
(+220 files in other folders)
